--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
   <header id="header">
     <div class="container header-container">
       <div class="logo">
-        <h1>Mertal Error</h1>
+        <h1>Ignore</h1>
       </div>
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
@@ -737,7 +737,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="container hero-content">
-      <h2>Mettal Error</h2>
+      <h2>Ignore</h2>
       <p>Experience the raw power of the Mettal Error</p>
       <a href="#events" class="cta-button">Upcoming Events</a>
     </div>
