--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
   <section id="home" class="hero">
     <div class="container hero-content">
       <h2>Ignore</h2>
-      <p>Experience the raw power of the Mettal Error</p>
+      <p>Experience the raw power of the Ignore</p>
       <a href="#events" class="cta-button">Upcoming Events</a>
     </div>
     <a href="#about" class="scroll-down">
@@ -750,7 +750,7 @@
   <section id="about" class="section about">
     <div class="container">
       <h2 class="section-title">About The Band</h2>
-      <p>Mettal Error is not just a Band; it's a revolution. With 12 talented members, we bring out the best in skills--blending raw energy with cutting-edge innovation. We've been energizing the music scene in Bangladesh with our unique sound and electrifying performances.</p>      
+      <p>Ignore is not just a Band; it's a revolution. With 12 talented members, we bring out the best in skills--blending raw energy with cutting-edge innovation. We've been energizing the music scene in Bangladesh with our unique sound and electrifying performances.</p>      
       <div class="band-members">
         <div class="member">
           <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Band Member">
@@ -983,7 +983,7 @@
           </div>
           <div class="admin-item">
             <div>
-              <strong>Metal Mayhem</strong> - June 22, 2025 at Dhaka Stadium
+              <strong>ignore</strong></strong> - June 22, 2025 at Dhaka Stadium
             </div>
             <div class="admin-item-actions">
               <a href="#" class="edit"><i class="fas fa-edit"></i></a>
@@ -992,7 +992,7 @@
           </div>
           <div class="admin-item">
             <div>
-              <strong>Error in the System Tour</strong> - August 5-15, 2025 (Nationwide Tour)
+              <strong>ignore in the System Tour</strong> - August 5-15, 2025 (Nationwide Tour)
             </div>
             <div class="admin-item-actions">
               <a href="#" class="edit"><i class="fas fa-edit"></i></a>
