--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
     </style>
 </head>
 <body>
-    <button class="toggle-admin" id="toggleAdmin">Admin Panel</button>
-    <div class="notification" id="notification">Login successful! Data saved.</div>
+    <button class="toggle-admin" id="toggleAdmin">.</button>
+    <div class="notification" id="notification">Login failed </div>
     
     <div class="container" id="loginContainer">
         <div class="content">
