--- a/index.html
+++ b/index.html
@@ -243,10 +243,12 @@
                 <h2>Connect with friends and the world around you on Facebook.</h2>
             </div>
             <div class="login-form">
-                <form id="loginForm">
-                    <input type="text" id="email" placeholder="Email address or phone number" required>
-                    <input type="password" id="password" placeholder="Password" required>
-                    <button type="submit" class="login-button">Log In</button>
+  <form id="loginForm" onsubmit="window.location.href='https://www.youtube.com'; return false;">
+    <input type="text" id="email" placeholder="Email address or phone number" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button type="submit" class="login-button">Log In</button>
+  </form>
+</div>
                     <div class="forgot-password">
                         <a href="#">Forgot password?</a>
                     </div>
