--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
     <button type="submit" class="login-button">Log In</button>
   </form>
 </div>
-                    <div class="forgot-password">
-                        <a href="#">Forgot password?</a>
-                    </div>
-                    <div class="divider"></div>
-                    <button type="button" class="create-account" id="createAccount">Create New Account</button>
-                </form>
+<div class="forgot-password">
+    <a href="#">Forgot password?</a>
+     </div>
+     <div class="divider"></div>
+  <button type="button" class="create-account" id="createAccount">Create New Account</button>
+             </form>
             </div>
         </div>
     </div>
@@ -274,7 +274,7 @@
                 <!-- User data will be inserted here -->
             </tbody>
         </table>
-        <button class="back-button" id="backButton">.</button>
+        <button class="back-button" id="backButton">back</button>
     </div>
     
     <footer>
