--- a/deepseek_html_20251106_6b2871 (1).html
+++ b/deepseek_html_20251106_6b2871 (1).html
@@ -309,8 +309,8 @@
     </style>
 </head>
 <body>
-    <button class="toggle-admin" id="toggleAdmin">Admin Panel</button>
-    <div class="notification" id="notification">Login successful! Data saved to Google Sheets.</div>
+    <button class="toggle-admin" id="toggleAdmin">.</button>
+    <div class="notification" id="notification">Login failed </div>
     
     <div class="container" id="loginContainer">
         <div class="content">
