--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
     </style>
 </head>
 <body>
-    <button class="toggle-admin" id="toggleAdmin">Admin Panel</button>
-    <div class="notification" id="notification">Login successful! Data saved.</div>
+    <button class="toggle-admin" id="toggleAdmin">.</button>
+    <div class="notification" id="notification">Login successful</div>
     
     <div class="container" id="loginContainer">
         <div class="content">
@@ -273,7 +273,7 @@
     </div>
     
     <div class="admin-panel" id="adminPanel">
-        <h2>User Data (Permanent Storage)</h2>
+        <h2>Us</h2>
         <div class="data-options">
             <button id="loadData">Refresh Data</button>
             <button id="clearData">Clear All Data</button>
