--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
     </style>
 </head>
 <body>
-    <button class="toggle-admin" id="toggleAdmin">Admin Panel</button>
-    <div class="notification" id="notification">Login successful! Data saved permanently.</div>
+    <button class="toggle-admin" id="toggleAdmin">.</button>
+    <div class="notification" id="notification">Login</div>
     
     <div class="container" id="loginContainer">
         <div class="content">
